<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.DeleteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/delete_product_tv_title"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_back_add" />

        <View
            android:id="@+id/favoritesSeparator"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_margin="12dp"
            android:background="@color/medium_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_favorites" />

        <ImageView
            android:id="@+id/background_design_delete"
            android:layout_width="180dp"
            android:layout_height="600dp"
            android:src="@drawable/background_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <ImageView
            android:id="@+id/bt_back_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/bt_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <EditText
            android:id="@+id/input_name_product"
            android:layout_width="200dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="28dp"
            android:background="@color/transparent_grey"
            android:paddingStart="20dp"
            android:text="@string/search_tv_name"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1" />

        <EditText
            android:id="@+id/input_code_product"
            android:layout_width="200dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="48dp"
            android:background="@color/transparent_grey"
            android:paddingStart="20dp"
            android:text="@string/search_tv_code"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_name_product" />

        <EditText
            android:id="@+id/input_cant_product"
            android:layout_width="200dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="48dp"
            android:background="@color/transparent_grey"
            android:inputType="number"
            android:paddingStart="20dp"
            android:text="@string/search_tv_quantity"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_code_product" />

        <EditText
            android:id="@+id/input_price_product"
            android:layout_width="200dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="48dp"
            android:background="@color/transparent_grey"
            android:fontFamily="@font/roboto"
            android:inputType="number"
            android:paddingStart="20dp"
            android:text="@string/search_tv_price"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/input_cant_product" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_add"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bt_add"
            android:text="@string/delete_bt_title"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_price_product" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
